# itmo-coding

./: notes.ipynb  requirements.txt  test_utils.py  utils.py
cpp/: CMakeLists.txt  generate_build.sh
cpp/cmake/: ahmad1337_deps.cmake  ahmad1337_utils.cmake
decoders/: .clangd  CMakeLists.txt  a.cpp  debug.sh  gdb-script.txt  runtest.sh  trellis-example.dot
decoders/include/: common.hh
decoders/src/: a.cc
decoders/test/: a-input-01.txt  a-input-02.txt  test-a.cc
kr/: solution.ipynb
rz-viterbi/: input.txt
